CSS 2.1 failure: margin-collapse-clear-012 fails https://bugs.webkit.org/show_bug.cgi?id=80394

Reviewed by David Hyatt.

Source/WebCore:

CSS2.1 states: "If the top and bottom margins of an element with clearance are adjoining, its margins collapse with
the adjoining margins of following siblings but that resulting margin does not collapse with the bottom margin of the parent block."
This is a change in the spec since http://trac.webkit.org/changeset/47678, so prevent the margins of collapsed blocks from collapsing
with parent margins.

Also, in the case of self-collapsing blocks adjust the clearance so that it is equal to [height of float to clear] - margin-top of the
self-collapsing block. (See the 'Explanation' section near the end of http://www.w3.org/TR/CSS21/visuren.html#clearance). This allows
the correct value of any margins collapsed with subsequent siblings to contribute to the height of the parent. For example if a block
with margin-top of 40px has to clear a float of 100px, the clearance is now 60px so set that as the height of the parent. If a subsequent
sibling has a collapsed margin value of 140px (e.g. from a margin-top of 80px and a margin-bottom of 140px) then the height of the parent
becomes 200px by adding on that collapsed margin.

Tests: css2.1/20110323/margin-collapse-clear-012.htm
       css2.1/20110323/margin-collapse-clear-013.htm
       css2.1/20110323/margin-collapse-027.htm
       fast/css/margin-collapse-013-reduction.html
       fast/css/margin-collapse-top-margin-clearance.html
       fast/css/margin-collapse-top-margin-clearance-with-sibling.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::clearFloatsIfNeeded):
(WebCore::RenderBlock::handleAfterSideOfBlock): Without this margin-collapse/block-inside-inline/025.html adds in the margin to
  an anonymous block containing a block child. FF does this, Opera does not. The spec is not crystal-clear but Opera's behaviour
  seems correct - it's totally unintuitive to think the margins of an anonymous block and its block-flow child should be considered adjoining.
  Maybe this is a FIXME pending clarification in the spec?
* rendering/RenderBlock.h:
(WebCore::RenderBlock::MarginInfo::setCanCollapseMarginAfterWithChildren):

LayoutTests:

* css2.1/20110323/margin-collapse-027-expected.html: Added.
* css2.1/20110323/margin-collapse-027.htm: Added.
* css2.1/20110323/margin-collapse-clear-012-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-012.htm: Added.
* css2.1/20110323/margin-collapse-clear-013-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-013.htm: Added.
* css2.1/20110323/margin-collapse-clear-014-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-014.htm: Added.
* css2.1/20110323/margin-collapse-clear-015-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-015.htm: Added.
* css2.1/20110323/margin-collapse-clear-016-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-016.htm: Added.
* css2.1/20110323/margin-collapse-clear-017-expected.html: Added.
* css2.1/20110323/margin-collapse-clear-017.htm: Added.
* fast/block/margin-collapse/empty-clear-blocks.html:
  Modified the test to reflect the new expected result. The text in the third paragraph avoids
  the float rather than sitting underneath it. The text in the third last paragraph is 20 px below
  the float rather than immediately beneath it. Both of these are a consequence of the revised treatment
  of clearance when margin collapsing. This is consistent with the spec and FF and Opera.
* fast/css/margin-collapse-013-reduction.html: Added.
   Sourced from https://bugzilla.mozilla.org/show_bug.cgi?id=493380
* fast/css/margin-collapse-top-margin-clearance-with-sibling-expected.html: Added.
* fast/css/margin-collapse-top-margin-clearance-with-sibling.html: Added.
    Ensure we only avoid collapsing the margins of a self-collapsing block with the parent if we don't
    have a subsequent sibling with height.
* fast/css/margin-collapse-top-margin-clearance.html: Added.

* platform/chromium-linux/fast/block/float/024-expected.png:
* platform/chromium-linux/fast/block/margin-collapse/empty-clear-blocks-expected.png:
  These two progress to the same rendering used by FF and Opera. It is a consequence of calculating
  clearance as "clearance = [height of float] - margin-top" when margin-top is a negative value.

* platform/chromium-win/fast/block/float/024-expected.txt:
* platform/chromium-win/fast/block/margin-collapse/025-expected.txt:
* platform/chromium-win/fast/block/margin-collapse/block-inside-inline/025-expected.txt:
    The change in result for these three is a consequence of self-collapsing blocks with clearance moving their top up past the float by the value
    of their top margin. Unlike the block-inside-inline case the 'clear' has no intrinsic height so the uncollapsed margin value has
    no effect on its height.

* platform/chromium-win/fast/block/margin-collapse/empty-clear-blocks-expected.txt: See the png result above for comment.

Canonical link: https://commits.webkit.org/113334@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127163 268f45cc-cd09-0410-ab3c-d52691b4dbfc